--- a/roles/common/tasks/install_dependencies.yml
+++ b/roles/common/tasks/install_dependencies.yml
@@ -7,6 +7,10 @@
   with_items:
     - python2.7
     - python3-pip
+    - apt-transport-https
+    - ca-certificates
+    - curl
+    - software-properties-common
 
 - name: "Install pip packages"
   pip:
@@ -14,3 +18,6 @@
   with_items:
     - docker-py
     - passlib
+
+- name: "Install docker"
+  shell: curl -sSL https://get.docker.com | sh
