--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 - import_tasks: prepare_info.yml
 - import_tasks: install_dependencies.yml
 
-- import_tasks: setup_access.yml
+- import_tasks: configure_user.yml
   when: ("vault" in FEATURES)
 
 - import_tasks: update_access.yml
