--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -1,8 +1,9 @@
 GOGS_VERSION: "0.11.66"
 GOGS_SSH_PORT: 8022
 GOGS_FRONT_PORT: 3000
+GOGS_EXPOSITION: "false"
 GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
-TRAEFIK_VERSION: "1.6.6"
+TRAEFIK_VERSION: "1.7.5"
 TRAEFIK_FRONT_PORT: 8000
 TRAEFIK_EXPOSITION: "false"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
