--- a/roles/common/tasks/configure_user.yml
+++ b/roles/common/tasks/configure_user.yml
@@ -1,4 +1,4 @@
-- name: "Create regular user"
+- name: "Set regular user parameters"
   user:
     name: "{{ USER_NAME }}"
     password: "{{ USER_PASS | password_hash('sha512') }}"
@@ -19,3 +19,8 @@
     owner: "{{ USER_NAME }}"
     group: "{{ USER_NAME }}"
     state: directory
+
+- name: "Ensure aliases are present in users profile"
+  lineinfile:
+    path: '/home/{{ USER_NAME }}/.profile'
+    line: alias ll='ls -alh'
