Reset root password to the vaulted password

--- a/roles/common/tasks/install_dependencies.yml
+++ b/roles/common/tasks/install_dependencies.yml
@@ -1,6 +1,6 @@
 - name: "Install python and python-pip"
   apt:
-    pkg: [python2.7, python3-pip, apt-transport-https, ca-certificates, curl, software-properties-common]
+    pkg: [python2.7, python3-pip, apt-transport-https, ca-certificates, curl, software-properties-common, htop]
     state: present
     update_cache: true
     cache_valid_time: 3600
