--- a/roles/infra/tasks/setup_gogs.yml
+++ b/roles/infra/tasks/setup_gogs.yml
@@ -17,7 +17,7 @@
       traefik.frontend.rule: "Host:{{ GOGS_EXTERNAL_URL }}"
     volumes:
       - "/{{ DATACORE }}/gogs:/data"
-  when: ansible_architecture == "armv7l" or ansible_architecture == "armv6l"
+  when: ansible_architecture == "armv7l" or ansible_architecture == "aarch64" or ansible_architecture == "armv6l"
 
 - name: "Launch gogs container x64 {{ GOGS_VERSION }}"
   docker_container:
