--- a/roles/infra/tasks/setup_https.yml
+++ b/roles/infra/tasks/setup_https.yml
@@ -34,7 +34,7 @@
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/traefik/certs/:/certs/"
       - "/{{ DATACORE }}/traefik:/etc/traefik"
-  when: ansible_architecture == "armv7l" or ansible_architecture == "aarch64" or ansible_architecture == "armv6l"
+  when: ansible_architecture in ["armv6l", "armv7l", "aarch64"]
 
 - name: "Launch traefik container for x64 {{ TRAEFIK_VERSION }}"
   docker_container:
@@ -56,7 +56,7 @@
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/traefik/certs/:/certs/"
       - "/{{ DATACORE }}/traefik:/etc/traefik"
-  when: ansible_architecture == "amd64" or ansible_architecture == "x86_64"
+  when: ansible_architecture in ["amd64", "x86_64"]
 
 - name: "Sleep for 30 seconds to let traefik starts"
   wait_for: timeout=30
