--- a/roles/infra/tasks/setup_gogs.yml
+++ b/roles/infra/tasks/setup_gogs.yml
@@ -17,7 +17,7 @@
       traefik.frontend.rule: "Host:{{ GOGS_EXTERNAL_URL }}"
     volumes:
       - "/{{ DATACORE }}/gogs:/data"
-  when: ansible_architecture == "armv7l" or ansible_architecture == "aarch64" or ansible_architecture == "armv6l"
+  when: ansible_architecture in ["armv6l", "armv7l", "aarch64"]
 
 - name: "Launch gogs container x64 {{ GOGS_VERSION }}"
   docker_container:
@@ -38,7 +38,7 @@
       traefik.frontend.rule: "Host:{{ GOGS_EXTERNAL_URL }}"
     volumes:
       - "/{{ DATACORE }}/gogs:/data"
-  when: ansible_architecture == "amd64" or ansible_architecture == "x86_64"
+  when: ansible_architecture in ["amd64", "x86_64"]
 
 - name: "Check for gogs configuration file"
   stat:
