--- a/roles/infra_storage/vars/main.yml
+++ b/roles/infra_storage/vars/main.yml
@@ -5,6 +5,7 @@ NEXUS_DOCKER_PULL_PORT: 8051
 NEXUS_DOCKER_PUSH_PORT: 8052
 NEXUS_EXPOSITION: "false"
 NEXUS_EXTERNAL_URL: "nexus.{{ DOMAIN_NAME }}"
+NEXUS_RESTART_DELAY: 40
 
 FDROID_VERSION: "0.5"
 FDROID_PORT: 8053
