Add an fdroid server to share android applications

--- a/roles/infra_storage/vars/main.yml
+++ b/roles/infra_storage/vars/main.yml
@@ -20,3 +20,10 @@ NEXUS_DOCKER_PULL_PORT: 8027
 NEXUS_DOCKER_PUSH_PORT: 8028
 NEXUS_EXPOSITION: "false"
 NEXUS_EXTERNAL_URL: "nexus.{{ DOMAIN_NAME }}"
+
+FDROID_VERSION: "0.3"
+FDROID_PORT: 8031
+FDROID_SSH_PORT: 8032
+FDROID_EXPOSITION: "false"
+FDROID_EXTERNAL_URL: "fdroid.{{ DOMAIN_NAME }}"
+FDROID_URL_IN_CONFIG: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
