add old style backup system (archive with duplicity and upload to FTP)

--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -7,3 +7,8 @@ TRAEFIK_VERSION: "1.7.6"
 TRAEFIK_FRONT_PORT: 8000
 TRAEFIK_EXPOSITION: "false"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
+
+BACKUP_MODE: ""
+BACKUP_REMOTE_URL: "mafreebox.free.fr"
+BACKUP_REMOTE_USER: "freebox"
+BACKUP_REMOTE_PATH: "Disque dur/backups"
