--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -1,5 +1,8 @@
 - import_tasks: setup_security.yml
 
+- import_tasks: setup_backup.yml
+  when: ("vault" in FEATURES) and (BACKUP_MODE != "")
+
 - import_tasks: setup_https.yml
   when: ("https" in FEATURES) and (DOMAIN_NAME != "")
 
