add wordpress container

--- a/roles/infra_media/tasks/main.yml
+++ b/roles/infra_media/tasks/main.yml
@@ -3,3 +3,6 @@
 
 - import_tasks: setup_peertube.yml
   when: ("peertube" in FEATURES)
+
+- import_tasks: setup_wordpress.yml
+  when: ("vault" in FEATURES) and ("blog" in FEATURES)
