--- a/roles/infra_media/vars/main.yml
+++ b/roles/infra_media/vars/main.yml
@@ -12,3 +12,9 @@ PEERTUBE_EXPOSITION: "false"
 PEERTUBE_IS_HTTPS: "false"
 PEERTUBE_TMP_PATH: "/tmp/peertube"
 PEERTUBE_DB_USER: "peertube"
+
+WORDPRESS_VERSION: "5.1-fpm-alpine"
+WORDPRESS_DB_VERSION: "8.0.12"
+WORDPRESS_FRONT_PORT: 8035
+WORDPRESS_EXPOSITION: "false"
+WORDPRESS_EXTERNAL_URL: "blog.{{ DOMAIN_NAME }}"
