--- a/roles/infra_media/tasks/main.yml
+++ b/roles/infra_media/tasks/main.yml
@@ -1,2 +1,5 @@
 - import_tasks: setup_mstream.yml
   when: ("mstream" in FEATURES)
+
+- import_tasks: setup_peertube.yml
+  when: ("peertube" in FEATURES) and (USER_MAIL != "{{ USER_NAME }}@{{ DOMAIN_NAME }}")
