--- a/roles/infra_media/vars/main.yml
+++ b/roles/infra_media/vars/main.yml
@@ -11,4 +11,4 @@ PEERTUBE_EXTERNAL_URL: "video.{{ DOMAIN_NAME }}"
 PEERTUBE_EXPOSITION: "false"
 PEERTUBE_IS_HTTPS: "false"
 PEERTUBE_TMP_PATH: "/tmp/peertube"
-PEERTUBE_DATABASE_USER: "peertube"
+PEERTUBE_DB_USER: "peertube"
