--- a/roles/infra_hard/vars/main.yml
+++ b/roles/infra_hard/vars/main.yml
@@ -4,7 +4,14 @@ INSOLANTE_URL: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address
 INSOLANTE_EXTERNAL_URL: "pcb.{{ DOMAIN_NAME }}"
 INSOLANTE_EXPOSITION: "false"
 
-NODERED_VERSION: "0.19.4"
+MQTT_VERSION: "1.6.3"
+MQTT_FRONT_PORT: 8036
+MQTT_EXTERNAL_URL: "mqtt.{{ DOMAIN_NAME }}"
+MQTT_EXPOSITION: "false"
+MQTT_READ_USER: "reader"
+MQTT_RW_USER: "writer"
+
+NODERED_VERSION: "0.20.7"
 NODERED_FRONT_PORT: 8024
 NODERED_EXTERNAL_URL: "flows.{{ DOMAIN_NAME }}"
 NODERED_EXPOSITION: "false"
