--- a/roles/infra_hard/tasks/main.yml
+++ b/roles/infra_hard/tasks/main.yml
@@ -4,5 +4,8 @@
 - import_tasks: setup_octoprint.yml
   when: ("octoprint" in FEATURES)
 
+- import_tasks: setup_mqtt.yml
+  when: ("nodered" in FEATURES)
+
 - import_tasks: setup_nodered.yml
   when: ("nodered" in FEATURES)
