--- a/setup_forge_arm.yml
+++ b/setup_forge_arm.yml
@@ -2,7 +2,7 @@
   vars:
   - FORGE_MODE: "test"
   - DOMAIN_NAME: ""
-  - FEATURES: ["vault", "blog"]
+  - FEATURES: ["vault", "nodered"]
   - USER_NAME: "pi"
   - USER_MAIL: "{{ USER_NAME}}@{{ DOMAIN_NAME }}"
   - DATACORE: "home/{{ USER_NAME }}/data"
