--- a/roles/infra_media/vars/main.yml
+++ b/roles/infra_media/vars/main.yml
@@ -13,8 +13,8 @@ PEERTUBE_IS_HTTPS: "false"
 PEERTUBE_TMP_PATH: "/tmp/peertube"
 PEERTUBE_DB_USER: "peertube"
 
-WORDPRESS_VERSION: "5.1-fpm-alpine"
-WORDPRESS_DB_VERSION: "latest-aarch64"
+WORDPRESS_VERSION: "5.2.2-php7.1"
+WORDPRESS_DB_VERSION: "10.1"
 WORDPRESS_FRONT_PORT: 8035
 WORDPRESS_EXPOSITION: "false"
 WORDPRESS_EXTERNAL_URL: "blog.{{ DOMAIN_NAME }}"
