update all docker images
gogs, traefik, mqtt, octoprint, mstream, portainer, fdroid

--- a/roles/infra_hard/tasks/main.yml
+++ b/roles/infra_hard/tasks/main.yml
@@ -5,7 +5,7 @@
   when: ("octoprint" in FEATURES)
 
 - import_tasks: setup_mqtt.yml
-  when: ("nodered" in FEATURES)
+  when: ("nodered" in FEATURES) and ("vault" in FEATURES)
 
 - import_tasks: setup_nodered.yml
-  when: ("nodered" in FEATURES)
+  when: ("nodered" in FEATURES) and ("vault" in FEATURES)
