--- a/roles/infra_hard/tasks/setup_nodered.yml
+++ b/roles/infra_hard/tasks/setup_nodered.yml
@@ -39,6 +39,8 @@
     restart_policy: always
     recreate: yes
     user: "{{ user_id.stdout }}"
+    links:
+      - mqtt:mqtt
     ports:
       - "{{ NODERED_FRONT_PORT }}:1880"
     labels:
