--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,8 +1,8 @@
-- import_tasks: prepare_info.yml
-- import_tasks: install_dependencies.yml
-
-- import_tasks: configure_user.yml
+---
+- import_tasks: prepare_facts.yml
+- import_tasks: setup_host_dependencies.yml
+- import_tasks: setup_security.yml
+- import_tasks: setup_user.yml
   when: ("vault" in FEATURES)
-
-- import_tasks: update_access.yml
+- import_tasks: setup_access.yml
   when: ("vault" in FEATURES)
