--- a/roles/infra_ci/vars/main.yml
+++ b/roles/infra_ci/vars/main.yml
@@ -9,3 +9,9 @@ JENKINS_RESTART_DELAY: 100
 JENKINS_EXPOSITION: "false"
 JENKINS_EXTERNAL_URL: "ci.{{ DOMAIN_NAME }}"
 JENKINS_VALIDATE_PLUGIN_CERTS: false
+
+GOGS_VERSION: "0.11.91"
+GOGS_SSH_PORT: 8022
+GOGS_FRONT_PORT: 3000
+GOGS_EXPOSITION: "false"
+GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
