--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -4,5 +4,5 @@
 - import_tasks: setup_https.yml
   when: ("https" in FEATURES) and (DOMAIN_NAME != "")
 
-- import_tasks: setup_gogs.yml
-  when: ("gogs" in FEATURES)
+- import_tasks: setup_portainer.yml
+  when: ("portainer" in FEATURES)
