--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -1,15 +1,14 @@
-GOGS_VERSION: "0.11.91"
-GOGS_SSH_PORT: 8022
-GOGS_FRONT_PORT: 3000
-GOGS_EXPOSITION: "false"
-GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
+BACKUP_MODE: ""
+BACKUP_REMOTE_URL: "mafreebox.free.fr"
+BACKUP_REMOTE_USER: "freebox"
+BACKUP_REMOTE_PATH: "Disque dur/backups"
 
 TRAEFIK_VERSION: "1.7.14"
 TRAEFIK_FRONT_PORT: 8000
 TRAEFIK_EXPOSITION: "false"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
 
-BACKUP_MODE: ""
-BACKUP_REMOTE_URL: "mafreebox.free.fr"
-BACKUP_REMOTE_USER: "freebox"
-BACKUP_REMOTE_PATH: "Disque dur/backups"
+PORTAINER_VERSION: "1.22.0"
+PORTAINER_PORT: 8029
+PORTAINER_EXPOSITION: "false"
+PORTAINER_EXTERNAL_URL: "portainer.{{ DOMAIN_NAME }}"
