--- a/roles/infra_ci/tasks/main.yml
+++ b/roles/infra_ci/tasks/main.yml
@@ -1,3 +1,7 @@
+---
+- import_tasks: setup_gogs.yml
+  when: ("gogs" in FEATURES)
+
 - import_tasks: setup_jenkins.yml
   when: ("jenkins" in FEATURES) and ("vault" in FEATURES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
 
