--- a/roles/infra_hard/tasks/main.yml
+++ b/roles/infra_hard/tasks/main.yml
@@ -1,11 +1,12 @@
+---
+- import_tasks: setup_mqtt.yml
+  when: ("domotic" in FEATURES) and ("vault" in FEATURES)
+
+- import_tasks: setup_nodered.yml
+  when: ("domotic" in FEATURES) and ("vault" in FEATURES)
+
 - import_tasks: setup_insolante.yml
   when: ("insolante" in FEATURES)
 
 - import_tasks: setup_octoprint.yml
   when: ("octoprint" in FEATURES)
-
-- import_tasks: setup_mqtt.yml
-  when: ("nodered" in FEATURES) and ("vault" in FEATURES)
-
-- import_tasks: setup_nodered.yml
-  when: ("nodered" in FEATURES) and ("vault" in FEATURES)
