--- a/setup_forge_x64.yml
+++ b/setup_forge_x64.yml
@@ -7,8 +7,9 @@
   - USER_MAIL: "{{ USER_NAME}}@{{ DOMAIN_NAME }}"
   - DATACORE: "home/{{ USER_NAME }}/data"
   roles:
-    - common
-    - infra
-    - infra_hard
-    - infra_ci
-    - infra_storage
+  - common
+  - infra
+  - infra_ci
+  - infra_hard
+  - infra_media
+  - infra_storage
